retransformacion coordenadas embalses cedex

--- a/BBDD/Extracción/CEDEX - CH Jucar/Procesamiento.ipynb
+++ b/BBDD/Extracción/CEDEX - CH Jucar/Procesamiento.ipynb
@@ -2,28 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "78b0a329-cf52-42a1-a429-4de799830554",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "feb0484b-aea4-4b0b-9193-e280cee59925",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_embalses_cedex_id = pd.read_csv('embalse.csv', encoding='latin1',sep = ';')\n",
-    "#Cambiamos el nombre de las columnas para que se quede como en copernicus\n",
-    "df_embalses_cedex_id = df_embalses_cedex_id.rename(columns = {'long' : 'longitude', 'lat': 'latitude'})\n",
-    "#Transformamos longitud y latitud para que se queden en el orden de magnitud de copernicus\n",
-    "df_embalses_cedex_id['longitude'] = df_embalses_cedex_id['longitude'] /10000\n",
-    "df_embalses_cedex_id['latitude'] = df_embalses_cedex_id['latitude'] /10000\n",
+    "import pandas as pd\n",
+    "from pyproj import Transformer\n",
     "\n",
+    "df_embalses_cedex_id = pd.read_csv('embalse.csv', encoding='latin1',sep = ';')\n",
+    "transformer = Transformer.from_crs(\"EPSG:25830\", \"EPSG:4326\", always_xy=True)\n",
+    "longitude_list = []\n",
+    "latitude_list = []\n",
+    "for index,row in df_embalses_cedex_id.iterrows():\n",
+    "    xutm30 = row['xutm30'] \n",
+    "    yutm30 = row['yutm30']\n",
+    "    longitude, latitude = transformer.transform(xutm30, yutm30)\n",
+    "    longitude_list.append(longitude)\n",
+    "    latitude_list.append(latitude)\n",
+    "df_embalses_cedex_id['longitude'] = longitude_list  \n",
+    "df_embalses_cedex_id['latitude'] = latitude_list  \n",
     "df_embalses_cedex_id = df_embalses_cedex_id[['ref_ceh', 'nom_embalse','longitude', 'latitude']]\n",
     "df_embalses_cedex_id.to_csv('Transformados/df_embalses_cedex_id.csv')"
    ]
@@ -31,15 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70c48b77-4d5a-4f7f-aeea-ace4e1c736b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "103bbb1e-434f-43ec-b14b-8f3fda3e1eb2",
+   "id": "35328cdc-9794-4eb2-aabe-e6c403938dc2",
    "metadata": {},
    "outputs": [],
    "source": []
