BBDD actualizada y cambios en analisis

--- a/BBDD/Extracción/Copernicus - climate ERA5/Extraccion.ipynb
+++ b/BBDD/Extracción/Copernicus - climate ERA5/Extraccion.ipynb
@@ -2898,7 +2898,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import xarray as xr\n",
+    "\n",
+    "directorio = 'Extracción/Copernicus - climate ERA5'\n",
+    "df_copernicus = pd.DataFrame()\n",
+    "agg_funcs = {\n",
+    "            'total_precipitation': 'sum',\n",
+    "            'skin_temperature': 'mean',\n",
+    "            'evaporation': 'sum',\n",
+    "            'runoff': 'sum',\n",
+    "            'snowfall': 'sum',\n",
+    "            'soil_water_l1': 'sum',\n",
+    "            'soil_water_l2': 'sum',\n",
+    "            'soil_water_l3': 'sum',\n",
+    "            'soil_water_l4': 'sum',\n",
+    "            'high_vegetation_cover': 'mean',\n",
+    "            'low_vegetation_cover': 'mean',\n",
+    "            'type_high_vegetation': 'mean',\n",
+    "            'type_low_vegetation': 'mean',\n",
+    "            'type_high_vegetation': lambda x: x.mode()[0] if not x.mode().empty else np.nan,\n",
+    "            'type_low_vegetation': lambda x: x.mode()[0] if not x.mode().empty else np.nan\n",
+    "        }\n",
+    "for archivo in os.listdir(directorio):\n",
+    "    if archivo.endswith('.nc'):\n",
+    "        print(archivo)\n",
+    "        archivo_nc = os.path.join(directorio, archivo)\n",
+    "        ds = xr.open_dataset(archivo_nc)\n",
+    "        df = ds.to_dataframe()\n",
+    "        df = df.reset_index()\n",
+    "        df = df.drop(['number','expver'], axis = 1, errors='ignore')\n",
+    "        df = df[['valid_time', 'latitude', 'longitude', 'tp', 'skt', 'e', 'ro', 'sf',\n",
+    "       'swvl1', 'swvl2', 'swvl3', 'swvl4', 'cvh', 'cvl', 'tvh', 'tvl']]\n",
+    "        df = df.rename(columns = {'valid_time': 'date',\n",
+    "             'latitude': 'latitude',\n",
+    "             'longitude': 'longitude',\n",
+    "             'tp': 'total_precipitation',\n",
+    "             'skt': 'skin_temperature',\n",
+    "             'e': 'evaporation',\n",
+    "             'ro': 'runoff',\n",
+    "             'sf': 'snowfall',\n",
+    "             'swvl1': 'soil_water_l1',\n",
+    "             'swvl2': 'soil_water_l2',\n",
+    "             'swvl3': 'soil_water_l3',\n",
+    "             'swvl4': 'soil_water_l4',\n",
+    "             'cvh': 'high_vegetation_cover',\n",
+    "             'cvl': 'low_vegetation_cover',\n",
+    "             'tvh': 'type_high_vegetation',\n",
+    "             'tvl': 'type_low_vegetation'})\n",
+    "        df['date'] = pd.to_datetime(df['date']).dt.date\n",
+    "        \n",
+    "        df = df.groupby(['latitude', 'longitude', 'date']).agg(agg_funcs).reset_index()\n",
+    "        df_copernicus = pd.concat([df_copernicus, df], ignore_index=True)"
+   ]
   },
   {
    "cell_type": "code",
