--- a/Análisis Píxel.ipynb
+++ b/Análisis Píxel.ipynb
@@ -35,7 +35,10 @@
     }
    ],
    "source": [
-    "ls"
+    "import pandas as pd\n",
+    "from Func_extr import *\n",
+    "from Func_viz import *\n",
+    "from Func_analisis  import *     "
    ]
   },
   {
